src/layout/custom.scss
@import "bootstrap/scss/functions";

$primary: #ad4242;
$secondary: #315b85;
$success: #198754;
$info: #daffef;
$warning: #b8860b;
$danger: #9e2020;

@import "bootstrap/scss/variables";

$custom-colors: (
  "menu1": #7e57c2,
  "menu2": #ff8a65,
  "menu3": #6da6df,
  "group": #2a9d8f,
);

$theme-colors: map-merge($theme-colors, $custom-colors);

@import "bootstrap/scss/bootstrap";

.place-autocomplete {
  gmp-place-autocomplete {
    width: 100%;
    background-color: var(--bs-body-bg);
    color: var(--bs-body-color);
    border: var(--bs-border-width) solid var(--bs-border-color);
    border-radius: var(--bs-border-radius);
  }

  gmp-place-autocomplete::part(input) {
    background-color: transparent;
    color: var(--bs-body-color);
    border: none;
  }

  gmp-place-autocomplete::part(prediction-list) {
    color-scheme: light;
    background-color: var(--bs-body-bg);
  }
}

[data-bs-theme="dark"]
  .place-autocomplete
  gmp-place-autocomplete::part(prediction-list) {
  color-scheme: dark;
}

.venue-map {
  width: 100%;
  height: 220px;
  overflow: hidden;
}

